--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,2 @@
-# This is a basic workflow to help you get started with Actions
+name: Windows-CRD  on:   workflow_dispatch:     inputs:       authcode:         description: 'Enter CRD code'         required: true       pincode:         description: 'Six digit Pin'         required: true  jobs:   build:     runs-on: windows-latest      steps:       - uses: actions/checkout@v2        - name: Setting Execution Policy         run: Set-ExecutionPolicy -ExecutionPolicy Bypass -Scope Process        - name: Initializing Setup         run: ./setup.ps1        - name: Starting CRD         run: Start-Process -FilePath "${Env:PROGRAMFILES(X86)}\Google\Chrome Remote Desktop\CurrentVersion\remoting_start_host.exe" -ArgumentList "--code='${{ github.event.inputs.authcode }}' --redirect-url='https://remotedesktop.google.com/_/oauthredirect' --name=$Env:COMPUTERNAME" -Wait        - name: Keep Alive         run: ./timeout.ps1 
 
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
